# SGV_Gratus_Backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
app/: main.py
app/core/: security.py
app/db/: client.py
app/routers/: auth.py  credits.py  customers.py  invoices.py  products.py  reports.py  sales.py
backend-gratus/: Dockerfile  main.py  pyproject.toml
backend-gratus/routers/: products.py
prisma/: schema.prisma
prisma/migrations/20251018180215_init/: migration.sql
