[project]
name = "backend-gratus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "prisma>=0.15.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-escpos>=3.1",
    "reportlab>=4.4.3",
    "uvicorn>=0.35.0",
]
